// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@font-face in global 1`] = `
<div>
  <style>
    @font-face {
  font-family: some-name;
}
  </style>
</div>
`;

exports[`css call composition 1`] = `
Object {
  "name": "d4uv9l",
  "styles": ":hover{
    color: hotpink;
  }",
  "toString": [Function],
  "type": 1,
}
`;

exports[`css call to render 1`] = `
<div>
  <style>
    .css-ulmpz9 {
  color: green;
}
  </style>
  <div
    className="css-ulmpz9"
  >
    something
  </div>
</div>
`;

exports[`css call to render with array as styles 1`] = `
Array [
  <style>
    .css-fsfbn2 {
  color: yellow;
}
  </style>,
  <div
    className="css-fsfbn2"
  >
    <style>
      .css-ulmpz9 {
  color: green;
}

.css-1ndtvd6 {
  color: hotpink;
}
    </style>
    <div
      className="css-ulmpz9"
    >
      something
    </div>
    <div
      className="css-1ndtvd6"
    >
      anothor thing
    </div>
  </div>,
]
`;

exports[`dynamic 1`] = `
<div>
  <style>
    .css-1d1232a {
  position: absolute;
  cursor: pointer;
  width: 0px;
  height: 0px;
  border-color: transparent;
  border-style: solid;
  border-top-width: 0px;
  -webkit-transform: translate(50%,50%);
  -ms-transform: translate(50%,50%);
  transform: translate(50%,50%);
  border-bottom-color: undefined;
  border-right-width: 10px;
  border-bottom-width: 10px;
  border-left-width: 10px;
  margin-left: 5px;
  margin-top: 20px;
}
  </style>
  <div
    className="css-1d1232a"
  />
</div>
`;

exports[`functions get toStringed in css calls 1`] = `
Object {
  "name": "1qc3tyc",
  "styles": "
      function () {};
    ",
  "toString": [Function],
  "type": 1,
}
`;

exports[`global 1`] = `
<div>
  <style>
    body {
  color: hotpink;
}
  </style>
</div>
`;

exports[`keyframes 1`] = `
<div>
  <style>
    @-webkit-keyframes animation-1ozfi5a {
  from {
    color: green;
  }

  to {
    color: hotpink;
  }
}

@keyframes animation-1ozfi5a {
  from {
    color: green;
  }

  to {
    color: hotpink;
  }
}
  </style>
  <style>
    .css-rwyxac {
  -webkit-animation: animation-1ozfi5a;
  animation: animation-1ozfi5a;
}
  </style>
  <div
    className="css-rwyxac"
  >
    animation-1ozfi5a
  </div>
</div>
`;

exports[`label in css call 1`] = `
<div>
  <style>
    .css-1qs3104 {
  color: hotpink;
}
  </style>
  <div
    className="css-1qs3104"
  >
    something
  </div>
</div>
`;

exports[`object with false 1`] = `
<div>
  <style>
    .css-954372 {
  color: hotpink;
}
  </style>
  <div
    className="css-954372"
  >
    something
  </div>
</div>
`;

exports[`string as css prop throws 1`] = `
"Strings are not allowed as css prop values, please wrap it in a css template literal from '@emotion/css' like this: css\`
            color: hotpink;
          \`"
`;

exports[`theming with the css prop 1`] = `
Array [
  <style>
    .css-1lrxbo5 {
  color: hotpink;
}
  </style>,
  <div
    className="css-1lrxbo5"
  />,
]
`;

exports[`thing 1`] = `
<div>
  <style>
    .css-k008qs {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}
  </style>
  <div
    className="css-k008qs"
  >
    something
  </div>
</div>
`;
